--- a/README.adoc
+++ b/README.adoc
@@ -13,3 +13,7 @@ Communication through the event bus.
 == Step 3
 
 Introduce io.vertx:vertx-service-proxy (+vertx-codegen and pom config) to refactor the event bus code into services.
+
+== Step 4
+
+Testing
