--- a/README.adoc
+++ b/README.adoc
@@ -1,44 +1,11 @@
-= Vert.x guide: a wiki web application
+= Vert.x guide
 Julien Ponge <julien.ponge@insa-lyon.fr>
+:source-highlighter: highlight.js
+:icons: font
+:data-uri:
 
-== Step 1
+:leveloffset: +1
 
-Starter implementation with Vert.x web, Freemarker templates and Vert.x JDBC, 1 verticle, simple code.
+include::step-1/README.adoc[]
 
-== Step 2
-
-Evolve into 2 verticles, pass them configuration data (port, jdbc settings, sql queries, etc), and deploy from a main verticle.
-Communication through the event bus.
-
-== Step 3
-
-Introduce io.vertx:vertx-service-proxy (+vertx-codegen and pom config) to refactor the event bus code into services.
-
-== Step 4
-
-Testing
-
-== Step 5
-
-HttpClient / integrate with a 3rd-party service.
-
-== Step 6
-
-REST API
-
-== Step 7
-
-Access control and security
-
-* server-side pages using Shiro auth
-// (put warnings on not abusing internal APIs to put state / threadlocal issues + some parts are blocking so can be a perf problem)
-* API using JWT tokens
-* HTTPS all the things
-
-== Step 8
-
-Turn to client-side web app, remove server-side rendering.
-
-== Step 9
-
-Refactor to RxJava.
+:leveloffset: -1
