Deploy 2 HTTP server instances rather than 1

--- a/outline.adoc
+++ b/outline.adoc
@@ -10,6 +10,8 @@ Starter implementation with Vert.x web, Freemarker templates and Vert.x JDBC, 1 
 Evolve into 2 verticles, pass them configuration data (port, jdbc settings, sql queries, etc), and deploy from a main verticle.
 Communication through the event bus.
 
+Deploy 2 HTTP verticles.
+
 == Step 3
 
 Introduce io.vertx:vertx-service-proxy (+vertx-codegen and pom config) to refactor the event bus code into services.
